info window with image data

--- a/src/main/resources/be/afront/resources/ui.properties
+++ b/src/main/resources/be/afront/resources/ui.properties
@@ -1,6 +1,7 @@
 APPLICATION=CBZ Reader
 MENU_File=File
 MENU_ITEM_Open=Open
+MENU_ITEM_Info=Info
 MENU_Mode=Layout
 MENU_ITEM_Dual_2_columns=Side by Side
 MENU_ITEM_Dual_1_column=Alternating
