make encoding selectable

--- a/src/main/resources/be/afront/resources/ui.properties
+++ b/src/main/resources/be/afront/resources/ui.properties
@@ -11,5 +11,9 @@ MENU_ITEM_Fit_width=Fit Width
 MENU_Options=Options
 MENU_ITEM_Right_To_Left=Right To Left
 MENU_ITEM_Page_Numbers=Show Page Numbers
+MENU_Encoding=Encoding
+MENU_ITEM_ENCODING_Default=Default
+MENU_ITEM_ENCODING_Latin1=8859-1
+MENU_ITEM_ENCODING_CP932=CP932
 ABOUT_MESSAGE=About DuoCbzReader
 COPYRIGHT_MESSAGE=DuoCBZReader\nVersion 1.0.3\nCopyright © 2025 Paul Janssens\nAll rights reserved.
