reset the zoom level after selecting a new size from the menu
add an actual size item

--- a/src/main/resources/be/afront/resources/ui.properties
+++ b/src/main/resources/be/afront/resources/ui.properties
@@ -8,6 +8,7 @@ MENU_ITEM_Dual_1_column=Alternating
 MENU_Size=Size
 MENU_ITEM_Fit_image=Fit Image
 MENU_ITEM_Fit_width=Fit Width
+MENU_ITEM_Actual=Actual size
 MENU_Options=Options
 MENU_ITEM_Right_To_Left=Right To Left
 MENU_ITEM_Page_Numbers=Show Page Numbers
