start on two page mode for single file

--- a/src/main/resources/be/afront/resources/ui.properties
+++ b/src/main/resources/be/afront/resources/ui.properties
@@ -3,6 +3,9 @@ MENU_File=File
 MENU_ITEM_Open=Open
 MENU_ITEM_Info=Info
 MENU_Mode=Layout
+MENU_ITEM_Single=Single Page
+MENU_ITEM_SingleWideOddEven=Two Pages Odd-Even
+MENU_ITEM_SingleWideEvenOdd=Two Pages Even-Odd
 MENU_ITEM_Dual_2_columns=Side by Side
 MENU_ITEM_Dual_1_column=Alternating
 MENU_Size=Size
