add user guide and change log

--- a/src/main/resources/be/afront/resources/ui.properties
+++ b/src/main/resources/be/afront/resources/ui.properties
@@ -19,5 +19,8 @@ MENU_Encoding=Encoding
 MENU_ITEM_ENCODING_Default=Default
 MENU_ITEM_ENCODING_Latin1=8859-1
 MENU_ITEM_ENCODING_CP932=CP932
+MENU_Help=Help
+MENU_ITEM_User_Guide=User Guide
+MENU_ITEM_Change_log=Change Log
 ABOUT_MESSAGE=About DuoCbzReader
 COPYRIGHT_MESSAGE=DuoCBZReader\nVersion 1.0.5\nCopyright © 2025 Paul Janssens\nAll rights reserved.
