--- a/src/main/resources/be/afront/resources/ui.properties
+++ b/src/main/resources/be/afront/resources/ui.properties
@@ -2,6 +2,8 @@ APPLICATION=CBZ Reader
 MENU_File=File
 MENU_ITEM_Open=Open
 MENU_ITEM_Info=Info
+MENU_Recent=Recent Files
+MENU_ITEM_Clear=Clear Recent Files
 MENU_Mode=Layout
 MENU_ITEM_Single=Single Page
 MENU_ITEM_SingleWideOddEven=Two Pages Odd-Even
