add the Restore on Startup Preference

--- a/src/main/resources/be/afront/resources/ui.properties
+++ b/src/main/resources/be/afront/resources/ui.properties
@@ -14,6 +14,8 @@ MENU_Size=Size
 MENU_ITEM_Fit_image=Fit Image
 MENU_ITEM_Fit_width=Fit Width
 MENU_ITEM_Actual=Actual size
+MENU_Preferences=Preferences
+MENU_ITEM_Auto_Restore=Restore on Startup
 MENU_Options=Options
 MENU_ITEM_Right_To_Left=Right To Left
 MENU_ITEM_Page_Numbers=Show Page Numbers
@@ -25,4 +27,4 @@ MENU_Help=Help
 MENU_ITEM_User_Guide=User Guide
 MENU_ITEM_Change_log=Change Log
 ABOUT_MESSAGE=About DuoCbzReader
-COPYRIGHT_MESSAGE=DuoCBZReader\nVersion 1.0.10\nCopyright © 2025 Paul Janssens\nAll rights reserved.
+COPYRIGHT_MESSAGE=DuoCBZReader\nVersion 1.0.11\nCopyright © 2025 Paul Janssens\nAll rights reserved.
